--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 /**
  * @package gplplanet
  * @author Tyler Bell tylerwbell[at]gmail[dot]com
- * @copyright (C) 2009,2010 - Tyler Bell
+ * @copyright (C) 2009-2011 - Tyler Bell
  * @license GNU General Public License
  */
 
@@ -30,7 +30,7 @@ where required.  In a nutshell:
 - Creates highly optimized (read: not normalized) MySQL geoplanet database
 - Imports GeoPlanet TSV
 - Provides PHP wrappers for getParents(), getChildren(), disambiguate() etc. methods
-- Wraps geocode(), reverseGeocode(), and getElevation() calls (Web wervice only)
+- Wraps geocode(), reverseGeocode(), and getElevation() calls (Web Service only)
 - Gets and caches coordinates for woeids (not supplied with data dump)
 - Provides sample Web service scripts for deployment examples SaaS environments
 
