--- a/README
+++ b/README
@@ -113,9 +113,10 @@ Import Notes:
 
 TODO
 --------------------------
-- Siblings data optimization
+- Siblings data optimization (currently not cached)
 - BelongTo service integration
 - Name search JS code examples for as-you-type lookup
 - Experiment with SimpleDB
+- Reconsider how relationships (descendants etc) are cached.  Now just larger arrays in single field -- not elegant.
 
 
